in rtcontrib for large numbers of output files and delays while
rendering images using rtrace with the -n option.

Added ability for rsensor to output ray origins and directions
rather than actually loading octree and computing sensor value.

Fixed old bug in obj2rad where it would stop processing and
report a syntax error if the "void" type is used in the map file.

Updated reflection model according to EGSR 2010 paper by David
Geisler-Moroder and Arne Duer.

Replaced C-shell version of falsecolor with Perl script written
by Axel Jacobs.

****** COMPATIBILITY CHANGE ********
Changed -sj (specular jitter) option to something called specular
sampling (-ss), which if set less than 1 has the same behavior as
the old -sj, but when set greater than 1, spawns multiple ray
samples from semi-specular surfaces.

Fixed bug noticed by Randolph Fritz that caused ambient sync errors.

Fixed bug in findglare for reading picture files under Windows.

Added options to pvalue to note other color spaces on reverse conversion.
Thanks to Erich Philips for the feature request.

Added BSDF data-driven material type with full sampling support.

Added BRDF calculations to genBSDF.

Bug fixes in rsensor thanks to help from David Geisler-Moroder.

Added variable-resolution BSDF support in renderers and genBSDF.

Created pkgBSDF program to extract BSDF geometry and put it
together with surface description suitable for inclusion in
a Radiance scene.

Muted warning for "no light sources found" when there is at least
one glow object and interreflections are on (-ab > 0).

Fixed long-standing bug that caused underestimation of reflection
when specular component was below -st threshold in non-metals.

Checked in cross-platform cmake build system created by Bill Hoffman
of KitWare and sponsored by NREL.  This includes a qt-based
driver for rvu, which is built in the new subdirectory src/qtrvu.

=====================
Version 4.2

Axel Jacobs added -cp and -palettes options to falsecolor.